APIs/azure.com/servicefabric/6.0.0.1/java-client/docs/HealthEvent.md


# HealthEvent

Represents health information reported on a health entity, such as cluster, application or node, with additional metadata added by the Health Manager. 

## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**description** | **String** | The description of the health information. It represents free text used to add human readable information about the report. The maximum string length for the description is 4096 characters. If the provided string is longer, it will be automatically truncated. When truncated, the last characters of the description contain a marker \&quot;[Truncated]\&quot;, and total string size is 4096 characters. The presence of the marker indicates to users that truncation occurred. Note that when truncated, the description has less than 4096 characters from the original string.  |  [optional] |
|**healthState** | **HealthState** |  |  |
|**property** | **String** | The property of the health information. An entity can have health reports for different properties. The property is a string and not a fixed enumeration to allow the reporter flexibility to categorize the state condition that triggers the report. For example, a reporter with SourceId \&quot;LocalWatchdog\&quot; can monitor the state of the available disk on a node, so it can report \&quot;AvailableDisk\&quot; property on that node. The same reporter can monitor the node connectivity, so it can report a property \&quot;Connectivity\&quot; on the same node. In the health store, these reports are treated as separate health events for the specified node.  Together with the SourceId, the property uniquely identifies the health information.  |  |
|**removeWhenExpired** | **Boolean** | Value that indicates whether the report is removed from health store when it expires. If set to true, the report is remopved from the health store after it expires. If set to false, the report is treated as an error when expired. The value of this property is false by default. When clients report periodically, they should set RemoveWhenExpired false (default). This way, is the reporter has issues (eg. deadlock) and can&#39;t report, the entity is evaluated at error when the health report expires. This flags the entity as being in Error health state.  |  [optional] |
|**sequenceNumber** | **String** | The sequence number for this health report as a numeric string. The report sequence number is used by the health store to detect stale reports. If not specified, a sequence number is auto-generated by the health client when a report is added.  |  [optional] |
|**sourceId** | **String** | The source name which identifies the client/watchdog/system component which generated the health information.  |  |
|**timeToLiveInMilliSeconds** | **String** | The duration for which this health report is valid. This field is using ISO8601 format for specifying the duration. When clients report periodically, they should send reports with higher frequency than time to live. If clients report on transition, they can set the time to live to infinite. When time to live expires, the health event that contains the health information is either removed from health store, if RemoveWhenExpired is true, or evaluated at error, if RemoveWhenExpired false.  If not specified, time to live defaults to infinite value.  |  [optional] |
|**isExpired** | **Boolean** | Returns true if the health event is expired, otherwise false. |  [optional] |
|**lastErrorTransitionAt** | **OffsetDateTime** | If the current health state is &#39;Error&#39;, this property returns the time at which the health report was first reported with &#39;Error&#39;. For periodic reporting, many reports with the same state may have been generated however, this property returns only the date and time at the first &#39;Error&#39; health report was received.  If the current health state is &#39;Ok&#39; or &#39;Warning&#39;, returns the date and time at which the health state was last in &#39;Error&#39;, before transitioning to a different state.  If the health state was never &#39;Error&#39;, the value will be zero date-time.  |  [optional] |
|**lastModifiedUtcTimestamp** | **OffsetDateTime** | The date and time when the health report was last modified by the health store. |  [optional] |
|**lastOkTransitionAt** | **OffsetDateTime** | If the current health state is &#39;Ok&#39;, this property returns the time at which the health report was first reported with &#39;Ok&#39;. For periodic reporting, many reports with the same state may have been generated. This property returns the date and time when the first &#39;Ok&#39; health report was received.  If the current health state is &#39;Error&#39; or &#39;Warning&#39;, returns the date and time at which the health state was last in &#39;Ok&#39;, before transitioning to a different state.  If the health state was never &#39;Ok&#39;, the value will be zero date-time.  |  [optional] |
|**lastWarningTransitionAt** | **OffsetDateTime** | If the current health state is &#39;Warning&#39;, this property returns the time at which the health report was first reported with &#39;Warning&#39;. For periodic reporting, many reports with the same state may have been generated however, this property returns only the date and time at the first &#39;Warning&#39; health report was received.  If the current health state is &#39;Ok&#39; or &#39;Error&#39;, returns the date and time at which the health state was last in &#39;Warning&#39;, before transitioning to a different state.  If the health state was never &#39;Warning&#39;, the value will be zero date-time.  |  [optional] |
|**sourceUtcTimestamp** | **OffsetDateTime** | The date and time when the health report was sent by the source. |  [optional] |



